@@ -1,0 +1,13 @@
+Quests = {
+    "Quest ID": {
+        1: {
+            "Linked Quest": None,
+            "Start NPC ID": 2,
+            "End NPC ID": 2,
+            "Prerequisites": None,
+            "Requirement": "All mobs killed",
+            "Reward": "health",
+            "Complete": False
+        }
+    }
+}
