@@ -24,7 +24,7 @@ GRIDWIDTH = WIDTH / TILESIZE
 GRIDHEIGHT = HEIGHT / TILESIZE
 
 # Player Settings
-PLAYER_SPEED = 300
+PLAYER_SPEED = 600
 PLAYER_HIT_RECT = pg.Rect(0, 0, 60, 90)
 PLAYER_HEALTH = 100
 PLAYER_ATTACK_DELAY = 500
@@ -38,7 +38,7 @@ WEAPON_ARC = 45
 
 # Mob Settings
 MOB_HIT_RECT = pg.Rect(0, 0, 35, 70)
-MOB_SPEED = 75
+MOB_SPEED = 0
 MOB_HEALTH = 100
 MOB_DAMAGE = 10
 MOB_KNOCKBACK = 20
