@@ -19,6 +19,7 @@
     - NPC adds item to player inventory
     - NPC has new dialog after giving item to player
     - Dialog can by closed by pressing "T" or ESC
+    9/24 - Improved Dialog to better conform to a more modular format
 6. Map
     - Added many trees, Mobs, to map
     - Added NPC to map
